# snakemake-storage-plugin-gcs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
snakemake_storage_plugin_gcs/: __init__.py
snakemake_storage_plugin_gs/: __init__.py
tests/: __init__.py  conftest.py  test_fake_gcs.py  test_runner.py  tests.py
