[tool.poetry]
name = "snakemake-storage-plugin-gs"
version = "0.1.0"
description = "A Snakemake storage plugin for Google Cloud Storage"
authors = [
    "Vanessa Sochat <sochat1@llnl.gov>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
packages = [{include = "snakemake_storage_plugin_gs"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.12.0"
google-crc32c = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
