[tool.poetry]
name = "snakemake-storage-plugin-gcs"
version = "1.1.2"
description = "A Snakemake storage plugin for Google Cloud Storage"
authors = [
    "Vanessa Sochat <sochat1@llnl.gov>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-storage-plugin-gcs"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/gcs.html"
license = "MIT"
keywords = ["snakemake", "storage", "plugin", "google cloud storage"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.2"
snakemake-interface-storage-plugins = "^3.3.0"
google-cloud-storage = "^2.12.0"
google-crc32c = "^1.1.2"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1,<25.0.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = ">=7.4.2,<9.0.0"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
